fix: adjust formatting for improved readability in _app.tsx and globals.scss animations

--- a/src/pages/globals.scss
+++ b/src/pages/globals.scss
@@ -42,7 +42,8 @@ svg#freepik_stories-404-error {
     }
 
     #freepik--Rocket--inject-11 {
-      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) lightSpeedLeft;
+      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38)
+        lightSpeedLeft;
       animation-delay: 0s;
     }
   }
@@ -61,7 +62,8 @@ svg#freepik_stories-computer-troubleshooting {
     }
 
     #freepik--Shadow--inject-2 {
-      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) lightSpeedLeft;
+      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38)
+        lightSpeedLeft;
       animation-delay: 0s;
     }
 
@@ -105,7 +107,8 @@ svg#freepik_stories-internet-on-the-go {
     }
 
     #freepik--Character--inject-3 {
-      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38) lightSpeedRight;
+      animation: 1s 1 forwards cubic-bezier(0.36, -0.01, 0.5, 1.38)
+        lightSpeedRight;
       animation-delay: 0s;
     }
   }
